Виправив get  для користувачiв
