# Project/routes/trackRoutes.js
@@ -4,6 +4,7 @@
 const express = require('express');
 const router = express.Router();
 const controller = require('../controllers/trackController');
+router.get('/', controller.getAllTracks);
 router.post('/', controller.createTrack);
 router.get('/search', controller.searchTracks);
 module.exports = router;
