# Project/routes/userRoutes.js
@@ -1,9 +1,8 @@
-
-// routes/userRoutes.js
 const express = require('express');
 const router = express.Router();
 const controller = require('../controllers/userController');
+router.get('/', controller.getAllUsers);
+router.get('/:id', controller.getUserById);
 router.post('/', controller.createUser);
 router.delete('/:id', controller.deleteUser);
 module.exports = router;
-
